WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66073
[GTK] Fix compilation problems with deprecations in gtk+
https://bugs.webkit.org/show_bug.cgi?id=66073
Summary
[GTK] Fix compilation problems with deprecations in gtk+
Alejandro G. Castro
Reported
2011-08-11 10:15:07 PDT
I'd rather have this reviewed to check all the changes are correct. JFTR the compilation I'm using is: build-webkit --gtk --debug --with-gtk=3.0 --enable-webkit2
Attachments
Proposed patch
(14.26 KB, patch)
2011-08-16 11:31 PDT
,
Alejandro G. Castro
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2011-08-16 11:31:52 PDT
Created
attachment 104071
[details]
Proposed patch
Alejandro G. Castro
Comment 2
2011-08-18 13:08:40 PDT
Landed
http://trac.webkit.org/changeset/93338
Martin Robinson
Comment 3
2011-08-19 09:57:40 PDT
***
Bug 66546
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug