Source/WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp
@@ -531,7 +531,11 @@ void FullscreenVideoController::createHud()
 
     g_signal_connect(m_hudWindow, "motion-notify-event", G_CALLBACK(onFullscreenGtkMotionNotifyEvent), this);
 
+#ifdef GTK_API_VERSION_2
     GtkWidget* hbox = gtk_hbox_new(FALSE, 4);
+#else
+    GtkWidget* hbox = gtk_box_new(GTK_ORIENTATION_HORIZONTAL, 4);
+#endif
     gtk_container_add(GTK_CONTAINER(m_hudWindow), hbox);
 
     m_playPauseAction = gtk_action_new("play", _("Play / Pause"), _("Play or pause the media"), PAUSE_ICON_NAME);
@@ -546,7 +550,11 @@ void FullscreenVideoController::createHud()
     gtk_box_pack_start(GTK_BOX(hbox), label, FALSE, TRUE, 0);
 
     GtkAdjustment* adjustment = GTK_ADJUSTMENT(gtk_adjustment_new(0.0, 0.0, 100.0, 0.1, 1.0, 1.0));
+#ifdef GTK_API_VERSION_2
     m_timeHScale = gtk_hscale_new(adjustment);
+#else
+    m_timeHScale = gtk_scale_new(GTK_ORIENTATION_HORIZONTAL, adjustment);
+#endif
     gtk_scale_set_draw_value(GTK_SCALE(m_timeHScale), FALSE);
     gtk_range_set_show_fill_level(GTK_RANGE(m_timeHScale), TRUE);
     g_signal_connect(m_timeHScale, "button-press-event", G_CALLBACK(timeScaleButtonPressed), this);
